<resources>
    <string name="app_name">MVP</string>
    <string name="input_user_info_title">请输入用户信息</string>
    <string name="read_user_info_title">查看用户信息</string>
    <string name="please_input_user_name_tips">请输入用户名</string>
    <string name="please_input_user_password_tips">请输入用户密码</string>
    <string name="show_user_name">账号：%1$s</string>
    <string name="show_user_password">密码：%1$s</string>
    <string name="show_user_name_tips">账号：</string>
    <string name="show_user_password_tips">密码：</string>
    <!-- 公用 -->
    <string name="submit">提交</string>
    <string name="check">查看</string>
</resources>
